# SimpleNamedPipe

./: AGENTS.md  CMakeLists.txt  README-RU.md  README.md  build_all.bat  build_all_mingw.bat  build_hdr_mingw.bat  build_lib_mingw.bat  install_mql5.bat
MQL5/Experts/SimpleNamedPipe/: NamedPipeClientExample.mq5  NamedPipeClientWithCallbacks.mq5
MQL5/Include/SimpleNamedPipe/: NamedPipeClient.mqh
examples/: callback_example.cpp  universal_event_example.cpp
include/SimpleNamedPipe/: Config.hpp  Connection.hpp  NamedPipeServer.hpp  Utils.hpp
include/SimpleNamedPipe/NamedPipeServer/: Connection.hpp  IConnection.hpp  NamedPipeServer.ipp  ServerConfig.hpp  ServerEvent.hpp  ServerEventHandler.hpp  errors.hpp
src/: NamedPipeServer.cpp
